--- a/SharpBCI.Plugins/SharpBCI.VEP.Plugin/SharpBCI.VEP.Plugin.csproj
+++ b/SharpBCI.Plugins/SharpBCI.VEP.Plugin/SharpBCI.VEP.Plugin.csproj
@@ -125,6 +125,14 @@
       <Project>{e6db120f-4350-484d-99f8-0f159561c391}</Project>
       <Name>MarukoLib.DirectX</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\MarukoLib\MarukoLib.Lang\MarukoLib.Lang.csproj">
+      <Project>{cdc6516e-2114-4e81-8ba0-9d3e93f8da15}</Project>
+      <Name>MarukoLib.Lang</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\MarukoLib\MarukoLib.Threading\MarukoLib.Threading.csproj">
+      <Project>{334d2ca4-eba9-4977-a3ca-2badffa0c9bb}</Project>
+      <Name>MarukoLib.Threading</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\MarukoLib\MarukoLib\MarukoLib.csproj">
       <Project>{2f30247b-bb53-41d0-ad4e-845550366a96}</Project>
       <Name>MarukoLib</Name>
