--- a/SharpBCI.Tests/SharpBCI.Tests.csproj
+++ b/SharpBCI.Tests/SharpBCI.Tests.csproj
@@ -83,6 +83,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MarukoLib\MarukoLib.Lang\MarukoLib.Lang.csproj">
+      <Project>{cdc6516e-2114-4e81-8ba0-9d3e93f8da15}</Project>
+      <Name>MarukoLib.Lang</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\MarukoLib\MarukoLib.Logging\MarukoLib.Logging.csproj">
+      <Project>{36b35a27-9e3c-4a7b-870b-9df3b1fe534b}</Project>
+      <Name>MarukoLib.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\MarukoLib\MarukoLib.Threading\MarukoLib.Threading.csproj">
+      <Project>{334d2ca4-eba9-4977-a3ca-2badffa0c9bb}</Project>
+      <Name>MarukoLib.Threading</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\MarukoLib\MarukoLib\MarukoLib.csproj">
       <Project>{2F30247B-BB53-41D0-AD4E-845550366A96}</Project>
       <Name>MarukoLib</Name>
