--- a/SharpBCI.Tests/SharpBCI.Tests.csproj
+++ b/SharpBCI.Tests/SharpBCI.Tests.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParameterTests.cs" />
     <Compile Include="StageProviderTests.cs" />
     <Compile Include="StageProgramTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
