--- a/SharpBCI.Extensions/SharpBCI.Extensions.csproj
+++ b/SharpBCI.Extensions/SharpBCI.Extensions.csproj
@@ -86,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppEntry.cs" />
+    <Compile Include="Apps\FileRenamingToolWindow.xaml.cs">
+      <DependentUpon>FileRenamingToolWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Data\AutoParameterizedObject.cs" />
     <Compile Include="Data\ComplexObject.cs" />
     <Compile Include="Data\Dimensions.cs" />
@@ -218,6 +221,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Apps\FileRenamingToolWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Experiments\TextDisplay\TestWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
