--- a/SharpBCI.Extensions/SharpBCI.Extensions.csproj
+++ b/SharpBCI.Extensions/SharpBCI.Extensions.csproj
@@ -180,6 +180,15 @@
     <Compile Include="Streamers\MarkerStreamer.cs" />
     <Compile Include="Streamers\BiosignalStreamer.cs" />
     <Compile Include="TypeConverters.cs" />
+    <Compile Include="Windows\BiosignalVisualizationWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\GazePointVisualizationWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\VideoFramePresentationWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Windows\ViewConstants.cs" />
     <Compile Include="Windows\ContextChangedEventArgs.cs" />
     <Compile Include="Windows\LayoutChangedEventArgs.cs" />
@@ -193,6 +202,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MarukoLib\MarukoLib.DirectX\MarukoLib.DirectX.csproj">
+      <Project>{e6db120f-4350-484d-99f8-0f159561c391}</Project>
+      <Name>MarukoLib.DirectX</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\MarukoLib\MarukoLib.Lang\MarukoLib.Lang.csproj">
       <Project>{cdc6516e-2114-4e81-8ba0-9d3e93f8da15}</Project>
       <Name>MarukoLib.Lang</Name>
@@ -224,6 +237,12 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="SharpDX.Desktop">
+      <Version>4.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="SharpDX.Direct2D1">
+      <Version>4.2.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
