downgrade .net framework to 4.5.2

--- a/SharpBCI.Plugins/SharpBCI.VideoSources.Plugin/SharpBCI.VideoSources.Plugin.csproj
+++ b/SharpBCI.Plugins/SharpBCI.VideoSources.Plugin/SharpBCI.VideoSources.Plugin.csproj
@@ -8,10 +8,11 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SharpBCI.VideoSources</RootNamespace>
     <AssemblyName>SharpBCI.VideoSources.Plugin</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
