--- a/SharpBCI/App.config
+++ b/SharpBCI/App.config
@@ -12,6 +12,7 @@
     <userSettings>
     </userSettings>
   <runtime>
+    <loadFromRemoteSources enabled="true"/>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="SharpDX" publicKeyToken="b4dcf0f35e5521f1" culture="neutral"/>
