Rename NetStationTagging => NetStationEciTagging.

--- a/SharpBCI.Plugins/SharpBCI.EGI.Plugin/SharpBCI.EGI.Plugin.csproj
+++ b/SharpBCI.Plugins/SharpBCI.EGI.Plugin/SharpBCI.EGI.Plugin.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NetStationTagging.cs" />
+    <Compile Include="NetStationEciTagging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
