--- a/SharpBCI.Plugins/SharpBCI.MI.Plugin/SharpBCI.MI.Plugin.csproj
+++ b/SharpBCI.Plugins/SharpBCI.MI.Plugin/SharpBCI.MI.Plugin.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DirectShowVideoSource.cs" />
+    <Compile Include="MediaFoundationPlayer.cs" />
     <Compile Include="MiParadigm.cs" />
     <Compile Include="MiRemoteStageProvider.cs" />
     <Compile Include="MiStage.cs" />
@@ -111,8 +112,14 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.3</Version>
     </PackageReference>
+    <PackageReference Include="MediaFoundation">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="SharpDX.MediaFoundation">
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="ToastNotifications">
       <Version>2.5.1</Version>
