--- a/SharpBCI/SharpBCI.csproj
+++ b/SharpBCI/SharpBCI.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Windows\DeviceConfigWindow.xaml.cs">
       <DependentUpon>DeviceConfigWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\ParadigmComboBox.xaml.cs">
+      <DependentUpon>ParadigmComboBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\VideoFrameAnalysisWindow.xaml.cs">
       <DependentUpon>VideoFrameAnalysisWindow.xaml</DependentUpon>
     </Compile>
@@ -151,6 +154,10 @@
     <Page Include="Windows\DeviceConfigWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\ParadigmComboBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\ResultWindow.xaml">
       <SubType>Designer</SubType>
